added stratified splits + model snapshots

--- a/config.yaml
+++ b/config.yaml
@@ -23,8 +23,10 @@ paths:
   test: data/test.csv
   audio: data/resampled_audio
   ebird_code: data/ebird_codes.json
-  model_dir: checkpoints/00_convnet/checkpoint.pt # 00_vggish
+  best_pth: checkpoints/00_convnet/best_pth/checkpoint.pt # 00_vggish
+  snap_pth: checkpoints/00_convnet/snap_pth/
   logs: logs
+  splits: data/splits.csv
 
 # melspec parameters
 mel_params:
@@ -43,6 +45,6 @@ hyperparams:
   batch_size: 32
   valid_size: 0.2
   num_workers: 4
-  scheduler: cosineannealing
+  scheduler: CosineAnnealingLR
   lr: 0.001
   t_max: 10
