--- a/requirements.txt
+++ b/requirements.txt
@@ -77,6 +77,7 @@ numpy==1.19.0
 oauthlib==3.1.0
 opencv-python==4.3.0.36
 opt-einsum==3.2.1
+optuna=2.0.0
 packaging==20.3
 pandas==1.0.5
 pandocfilters==1.4.2
